solved mobile menu underlay shift

--- a/src/app.css
+++ b/src/app.css
@@ -355,7 +355,7 @@ body {
     top: 81px;
   background-color: rgba(0,0,0,0.5);
   pointer-events: all;
-  z-index: 0;
+  z-index: 2;
 
   /* background-color: rgba(0,0,0,0.05); */
   transition: opacity 0.5s 0s, background-color 0.5s 0s, top 0s;
@@ -913,6 +913,7 @@ button {
   width: 512px;
   /* box-shadow: 2px 2px 4px 0px #ddd; */
   overflow-x: hidden;
+  background-color: #fdfdfd;
 }
 
 
@@ -1644,7 +1645,7 @@ footer img {
 
 .menu-triangles {
   position: absolute;
-  background-color: #fdfdfd;
+  /* background-color: #fdfdfd; */
   left: 0;
   right: 0;
   overflow: hidden;
